<resources>
    <string name="app_name">FieldAid</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="fieldaid">FieldAid</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="soeemail_company_com">soeEmail@company.com</string>
    <string name="somepassword">SomePassword</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="register">Register</string>
    <string name="someemail_company_com">SomeEmail@company.com</string>
    <string name="registe_to_fieldaid">Register to FieldAid</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="title">Title:</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="FireBase_UserAccount">UserAccount</string>
    <string name="FireBase_User">User</string>
    <string name="FireBase_Project">Project</string>
    <string name="FireBase_Site">Site</string>
    <string name="FireBase_Task">Task</string>
    <string name="FireBase_Job">Job</string>
    <string name="FireBase_Contact">Contact</string>
    <string name="projects">Projects</string>
    <string name="sites">Sites</string>
    <string name="jobs">Jobs</string>
    <string name="home">Home</string>
    <string name="title_activity_main_view">ActivityMainView</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_project">Add Project</string>
    <string name="project_name">Project name</string>
    <string name="project_description">Project description</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_site">Add Site</string>
    <string name="site_name">Site Name</string>
    <string name="site_description">Site description</string>
    <string name="choose_a_project">Choose a project:</string>
    <string name="title_activity_map_view">ActivityMapView</string>
    <string name="submit">submit</string>
    <string name="contacts">Contacts</string>
    <string name="site">Site</string>
    <string name="add_contact">Add Contact</string>
    <string name="contact_name">Contact name</string>
    <string name="phone_number">Phone Number</string>
    <string name="site_details">Site Details</string>
    <string name="project">Project :</string>
    <string name="back">Back</string>
    <string name="add_job">Add Job</string>
    <string name="choose_a_site">Choose a site:</string>
    <string name="job_name">Job name</string>
    <string name="job_name_">Job name :</string>
    <string name="job_description">Job description</string>
    <string name="add_task">Add Task</string>
    <string name="task_name">Task name</string>
    <string name="task_description">Task description</string>
    <string name="edit_job">Edit Job</string>
    <string name="status">Status</string>
    <string name="edit_site">Edit Site</string>
    <string name="edit_project">Edit Project</string>
    <string name="profile_picture">Profile picture</string>
    <string name="add_photo">add photo</string>
</resources>