<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="FragmentRegisterViewModel"
            type="hit.androidonecourse.fieldaid.ui.viewmodels.FragmentRegisterViewModel" />
        <import type="android.text.TextUtils"/>
    </data>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.fragments.FragmentRegisterView">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/registe_to_fieldaid"/>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:columnCount="2"
                android:rowCount="6">
                <TextView android:text="@string/first_name"/>

                <EditText android:layout_width="match_parent"
                    android:inputType="text"
                    android:text="@={FragmentRegisterViewModel.user.firstName}"/>

                <TextView android:text="@string/last_name"/>

                <EditText android:layout_width="match_parent"
                    android:inputType="text"
                    android:text="@={FragmentRegisterViewModel.user.lastName}"/>

                <TextView android:text="@string/title"
                    android:gravity="end|clip_horizontal"/>

                <EditText android:layout_width="match_parent"
                    android:inputType="text"
                    android:text="@={FragmentRegisterViewModel.user.title}"/>

                <TextView android:text="@string/email"
                    android:layout_marginTop="15dp"/>

                <EditText android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="15dp"
                    android:text="@={FragmentRegisterViewModel.email}"/>

                <TextView android:text="@string/password"/>

                <EditText android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:text="@={FragmentRegisterViewModel.password}"/>

                <TextView android:text="@string/confirm_password"/>

                <EditText android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:text="@={FragmentRegisterViewModel.confirmPassword}"/>

            </GridLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/register"
                android:enabled="@{!TextUtils.isEmpty(FragmentRegisterViewModel.email) &amp;&amp; !TextUtils.isEmpty(FragmentRegisterViewModel.password) &amp;&amp; !TextUtils.isEmpty(FragmentRegisterViewModel.confirmPassword)}"
                android:onClick="@{(v) -> FragmentRegisterViewModel.onRegisterClicked(v)}"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>
</layout>
