<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="25dp"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_contact"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/dialog_addContact_editText_contactName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/contact_name"/>
        <EditText
            android:id="@+id/dialog_addContact_editText_ContactPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">
            <Button
                android:id="@+id/dialog_addContact_btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/dialog_addContact_btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>
        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>