<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="25dp"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_project"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/dialog_addProject_editText_projectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/project_name"/>
        <EditText
            android:id="@+id/dialog_addProject_editText_projectDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/project_description"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">
            <Button
                android:id="@+id/dialog_addProject_btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/dialog_addProject_btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>

