<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="25dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_site"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_a_project"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"/>

        <Spinner
            android:id="@+id/dialog_addSite_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        </LinearLayout>
        <EditText
            android:id="@+id/dialog_addSite_editText_projectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/site_name"/>
        <EditText
            android:id="@+id/dialog_addSite_editText_projectDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/site_description"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">
            <Button
                android:id="@+id/dialog_addSite_btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/dialog_addSite_btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>