<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="25dp"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_job"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_a_site"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"/>

            <Spinner
                android:id="@+id/dialog_addJob_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <EditText
            android:id="@+id/dialog_addJob_editText_JobName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/job_name"/>
        <EditText
            android:id="@+id/dialog_addJob_editText_JobDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/job_description"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:textSize="18dp"
            android:text="Choose Due Date"/>
        <DatePicker
            android:id="@+id/dialog_addJob_datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <TimePicker
            android:id="@+id/dialog_addJob_timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">
            <Button
                android:id="@+id/dialog_addJob_btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/dialog_addJob_btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>
        </LinearLayout>


    </LinearLayout>
    </ScrollView>


</androidx.cardview.widget.CardView>