<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:isScrollContainer="false"
    android:orientation="vertical"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical"
    android:layout_margin="10dp"
    tools:context=".ui.views.fragments.FragmentEditSiteView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_title_fragment_edit_site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Edit site"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/add_project" />

            <Spinner
                android:id="@+id/spinner_site_edit_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/site_name" />

            <EditText
                android:id="@+id/editText_name_site_edit_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/site_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/site_description" />

            <EditText
                android:id="@+id/editText_description_site_edit_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/site_description" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/contacts" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/imageBtn_add_contact_site_edit_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:src="@drawable/ic_add_contact" />
        </LinearLayout>

        <ListView
            android:id="@+id/listView_contacts_site_edit_fragment"
            android:layout_width="match_parent"
            android:layout_height="190dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="Set Location" />

        <FrameLayout
            android:id="@+id/frameLayout_map_site_edit_fragment"
            android:layout_width="match_parent"
            android:layout_height="300dp"
             />

        <Button
            android:id="@+id/btn_Site_edit_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>



